--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "sample-app2",
   "version": "0.1.0",
-  "private": true,
+  "private": true,  
+  "homepage": "https://tane2022.github.io/sample-app2",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
